correct css on mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -232,9 +232,6 @@ footer {
 }
 
 /* Button link navbar */
-.nav {
-    margin-left: auto;
-}
 
 .nav>li {
     margin-left: 1px;
@@ -893,6 +890,10 @@ footer {
 /* Small devices (phones, 335px and up) */
 @media only screen and (min-width: 335px) {
 
+    .nav-account-bag {
+        margin: 0 auto;
+    }
+
     .masthead {
         height: 200px;
     }
@@ -916,8 +917,23 @@ footer {
 
 }
 
+/* Small devices (phones, 510px and up) */
+@media only screen and (min-width: 510px) {
+    .nav-account-bag {
+        margin-left: 270px;
+        position: absolute;
+        font-size: 14px;
+    }
+
+}
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
+
+    .nav-account-bag {
+        margin-left: 300px;
+        position: absolute;
+    }
 
     .masthead-home {
         height: 33vh;
@@ -956,6 +972,10 @@ footer {
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
 
+    .nav-account-bag {
+        display: contents;
+    }
+
     .masthead-home {
         height: 53vh;
     }
@@ -970,6 +990,10 @@ footer {
 
 /* Large devices (laptops and desktops, 1024px and up) */
 @media screen and (min-width: 1024px) {
+
+    .nav-account-bag {
+        display: contents;
+    }
 
     .masthead-home {
         margin-top: 0px;
